headliners carousel experimentation, almost working, just got heigh issues and not responsive yet

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -401,6 +401,95 @@ section {
   padding-inline: 2rem;
   margin-top: 1rem;
   border-top: $border;
+  width: 100%;
+  // height: 100%;
+  height: 90vh;
+  // position: relative;
+
+  h3 {
+    color: $white;
+    margin-top: 1rem;
+  }
+  h5 {
+    color: $orange;
+    text-transform: uppercase;
+  }
+
+  input[type="radio"] {
+    display: none;
+  }
+  .card {
+    position: absolute;
+    width: 30rem;
+    // height: 100%;
+    left: 0;
+    right: 0;
+    margin: auto;
+    transition: transform 0.4s ease;
+    cursor: pointer;
+    display: grid;
+    gap: 1rem;
+    justify-items: center;
+
+    h2 {
+      position: absolute;
+      bottom: 6.5rem;
+      left: 1.5rem;
+      // font-family: $h1-font;
+      font-size: 3rem;
+      // color: $orange;
+    }
+  }
+  .container {
+    width: 100%;
+    // max-width: 800px;
+    // max-height: 600px;
+    // height: 100%;
+    transform-style: preserve-3d;
+    // display: flex;
+    // justify-content: center;
+    // flex-direction: column;
+    // align-items: center;
+  }
+  .cards {
+    // position: relative;
+    width: 100%;
+    // height: 100%;
+    margin-bottom: 20px;
+  }
+  img {
+    width: 100%;
+    // height: 100%;
+    aspect-ratio: 1/1;
+    border-radius: 2px;
+    object-fit: cover;
+  }
+
+  #item-1:checked ~ .cards #song-3,
+  #item-2:checked ~ .cards #song-1,
+  #item-3:checked ~ .cards #song-2 {
+    transform: translatex(-60%) scale(0.8);
+    opacity: 0.4;
+    z-index: 0;
+  }
+  #item-1:checked ~ .cards #song-2,
+  #item-2:checked ~ .cards #song-3,
+  #item-3:checked ~ .cards #song-1 {
+    transform: translatex(60%) scale(0.8);
+    opacity: 0.4;
+    z-index: 0;
+  }
+  #item-1:checked ~ .cards #song-1,
+  #item-2:checked ~ .cards #song-2,
+  #item-3:checked ~ .cards #song-3 {
+    transform: translatex(0) scale(1);
+    opacity: 1;
+    z-index: 1;
+
+    img {
+      box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
+    }
+  }
 }
 
 .headliners-container {
